--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,28 @@
 Package: paleoFROG
-Title: An Amazing Shiny App
+Title: FROG paleo MAAT reconstruction
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
+Authors@R: person('Alexandre', 'Thibault', email = 'alexandre.thibault@anteagroup.fr', role = c('cre', 'aut'))
+Description: Shiny app to reconstruct paleo MAAT using random forest models (FROG).
 License: What license is it under?
 Imports: 
     config,
     golem,
-    shiny
+    shiny,
+    magrittr,
+    dplyr,
+    tidyr,
+    echarts4r,
+    DT,
+    ranger,
+    parsnip,
+    recipes,
+    rsample,
+    tibble,
+    workflows
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
+URL: https://github.com/AThibault92/paleoFROG
+BugReports: https://github.com/AThibault92/paleoFROG/issues
+Depends: 
+    R (>= 2.10)
